Maps Integration Added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="white">#FFF</color>
     <color name="black">#000</color>
     <color name="tableBackground">#bbdefb</color>
+    <color name="showMapBackground">#1D62F0</color>
 </resources>
