--- a/app/src/main/res/layout/activity_eczane_bilgi.xml
+++ b/app/src/main/res/layout/activity_eczane_bilgi.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".EczaneBilgi">
+    tools:context="com.twitchsozluk.eczaneapp.EczaneBilgi">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
